--- a/settings.gradle
+++ b/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "Easy ChatGPT"
+rootProject.name = "Bruce Almighty AI"
 include ':app'
